apps/base/apps/core/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-v1-prefix
  namespace: revieu-prod
spec:
  stripPrefix:
    prefixes:
      - /api/v1
